fixed side scroll on mobile view

--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,6 +1,3 @@
-#profile-section {
-  margin: 50px;
-}
 
 #profile-section figure {
   max-width: 1200px;
@@ -22,7 +19,6 @@
   display: block;
   border-radius: 30px;
   max-width: 150px;
-  margin-bottom: 20px;
 }
 
 #about-me-write {
