--- a/src/mediaQueries.css
+++ b/src/mediaQueries.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 1200px) {
   /* so project images take two per row */
-  .gallery-cards {
+  /* .gallery-cards {
     margin: 30px;
     margin-bottom: 60px;
     flex-basis: 400px;
-  }
+  } */
 }
 
 /* media queries */
@@ -15,7 +15,7 @@
   }
   #about-me-write {
     text-align: justify;
-    padding: 0;
+    padding: 20px;
   }
   .modalContainer {
     width: 480px;
@@ -98,14 +98,14 @@
   }
 
   /* adjust size of project figures */
-  #marquee-project {
+  /* #marquee-project {
     width: 400px;
-  }
+  } */
 
-  .gallery-cards {
+  /* .gallery-cards {
     flex: 0 0 400px;
     margin-bottom: 30px;
-  }
+  } */
 }
 
 @media screen and (max-width: 530px) {
@@ -140,12 +140,12 @@
   }
 
   /* adjust size of project figures */
-  #marquee-project {
+  /* #marquee-project {
     width: 90%;
   }
   .gallery-cards {
     flex: 0 0 90%;
     margin: 0;
     margin-bottom: 30px;
-  }
+  } */
 }
